--- a/package.json
+++ b/package.json
@@ -5,23 +5,60 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "prepare": "husky install",
+    "format": "prettier --write . --fix",
+    "lint": "eslint . --ext ts --ext tsx --ext js --fix"
+  },
+  "lint-staged": {
+    "*.@(ts|tsx)": [
+      "yarn lint",
+      "yarn format"
+    ]
   },
   "dependencies": {
-    "@chakra-ui/core": "^0.8.0",
-    "@chakra-ui/react": "^1.7.2",
-    "@emotion/react": "^11.6.0",
-    "@emotion/styled": "^11.6.0",
-    "framer-motion": "^5.3.0",
+    "@chakra-ui/icons": "^1.0.13",
+    "@chakra-ui/react": "^1.6.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@fontsource/inter": "^4.4.5",
+    "@fontsource/poppins": "^4.4.5",
+    "apexcharts": "^3.30.0",
+    "framer-motion": "^4",
     "next": "12.0.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next-images": "^1.8.1",
+    "polished": "^4.1.2",
+    "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-input-mask": "^2.0.4",
+    "react-is": "^17.0.2",
+    "react-toastify": "^7.0.4",
+    "react-toggle-dark-mode": "^1.0.4",
+    "react-transition-group": "^4.4.2",
+    "yarn-check": "^0.0.3"
   },
   "devDependencies": {
     "@types/node": "^16.11.8",
     "@types/react": "^17.0.35",
-    "eslint": "7",
+    "eslint": "8.2.0",
+    "eslint-config-airbnb": "19.0.0",
     "eslint-config-next": "12.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "8.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-sonarjs": "0.10.0",
+    "eslint-plugin-unicorn": "38.0.1",
+    "husky": "7.0.4",
+    "lint-staged": "12.0.3",
+    "prettier": "^2.3.1",
     "typescript": "^4.5.2"
   }
 }
