--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fontsource/inter": "^4.4.5",
     "@fontsource/poppins": "^4.4.5",
     "apexcharts": "^3.30.0",
+    "date-fns": "^2.26.0",
     "framer-motion": "^4",
     "next": "12.0.4",
     "next-images": "^1.8.1",
